--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bulma": "^0.9.2",
     "next": "10.0.6",
     "org": "^0.2.0",
     "react": "17.0.1",
