--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "autolinker": "^3.14.2",
     "bulma": "^0.9.2",
     "highlight.js": "^10.6.0",
     "next": "10.0.6",
