--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "rehype": "^11.0.0",
+    "rehype-autolink-headings": "^5.0.1",
+    "rehype-slug": "^4.0.1",
     "reorg-rehype": "^2.3.15",
     "unified": "^9.2.0"
   }
