--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "orga-unified": "^2.3.15",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "rehype": "^11.0.0",
     "rehype-autolink-headings": "^5.0.1",
     "rehype-slug": "^4.0.1",
+    "rehype-stringify": "^8.0.0",
     "reorg-rehype": "^2.3.15",
     "unified": "^9.2.0"
   }
