--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rehype-slug": "^4.0.1",
     "rehype-stringify": "^8.0.0",
     "reorg-rehype": "^2.3.15",
+    "sass": "^1.32.8",
     "unified": "^9.2.0"
   }
 }
