--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autolinker": "^3.14.2",
     "bulma": "^0.9.2",
     "highlight.js": "^10.6.0",
+    "n-readlines": "^1.0.1",
     "next": "10.0.6",
     "orga": "^2.3.15",
     "orga-unified": "^2.3.15",
