--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bulma": "^0.9.2",
     "highlight.js": "^10.6.0",
     "n-readlines": "^1.0.1",
-    "next": "10.0.6",
+    "next": "^10.2.0",
     "orga": "^2.3.15",
     "orga-unified": "^2.3.15",
     "react": "17.0.1",
