--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "reorg-rehype": "^2.3.15",
     "sass": "^1.32.8",
     "unified": "^9.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.8",
+    "typescript": "^4.3.2"
   }
 }
