--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "unified": "^9.2.0"
   },
   "devDependencies": {
+    "@types/n-readlines": "^1.0.1",
     "@types/react": "^17.0.8",
     "typescript": "^4.3.2"
   }
