--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autolinker": "^3.14.2",
+    "bootstrap": "^5.0.0-beta3",
     "highlight.js": "^10.6.0",
     "n-readlines": "^1.0.1",
     "next": "^10.2.0",
