--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/animejs": "^3.1.4",
     "@types/needle": "^2.5.2",
+    "animejs": "^3.2.1",
     "autolinker": "^3.14.2",
     "bootstrap": "^5.0.0-beta3",
     "highlight.js": "^10.6.0",
