--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/needle": "^2.5.2",
     "animejs": "^3.2.1",
     "autolinker": "^3.14.2",
+    "axios": "^0.26.1",
     "bootstrap": "^5.0.0-beta3",
     "highlight.js": "^10.6.0",
     "n-readlines": "^1.0.1",
