--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@types/animejs": "^3.1.4",
+    "@types/jsdom": "^16.2.14",
     "@types/needle": "^2.5.2",
     "animejs": "^3.2.1",
     "autolinker": "^3.14.2",
     "axios": "^0.26.1",
     "bootstrap": "^5.0.0-beta3",
     "highlight.js": "^10.6.0",
+    "jsdom": "^19.0.0",
     "n-readlines": "^1.0.1",
     "needle": "^2.8.0",
     "next": "^10.2.0",
