--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.0.0-beta3",
     "highlight.js": "^10.6.0",
     "jsdom": "^19.0.0",
+    "memo": "https://github.com/eggc/memo",
     "n-readlines": "^1.0.1",
     "needle": "^2.8.0",
     "next": "^10.2.0",
