--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@types/animejs": "^3.1.4",
     "@types/jsdom": "^16.2.14",
     "@types/needle": "^2.5.2",
