🏥 typescript で memo を読み込んだ時に型定義エラーを発生させない

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "baseUrl": ".",
     "paths": {
       "@lib/*": ["./lib/*"]
-    }
+    },
+    "typeRoots": ["./@types/"]
   },
   "include": [
     "next-env.d.ts",
