--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "rehype-stringify": "^8.0.0",
     "reorg-rehype": "^2.3.16",
     "sass": "^1.32.8",
-    "unified": "^9.2.0"
+    "unified": "^9.2.0",
+    "uniorg-parse": "^0.5.1",
+    "uniorg-rehype": "^0.5.1"
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
