🏥 ESM 読み込みエラーを修正

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,14 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": [
+        "./*"
+      ]
     },
-    "typeRoots": ["./@types/"]
+    "typeRoots": [
+      "./@types/"
+    ],
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
