--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.1.0",
     "react-select": "^4.3.1",
     "rehype-autolink-headings": "^5.0.1",
+    "rehype-katex": "^6.0.2",
     "rehype-slug": "^4.0.1",
     "rehype-stringify": "^8.0.0",
     "reorg-rehype": "^2.3.16",
