--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "animejs": "^3.2.1",
     "autolinker": "^3.14.2",
     "bootstrap": "^5.0.0-beta3",
-    "highlight.js": "^11.5.1",
     "memo": "https://github.com/eggc/memo",
     "n-readlines": "^1.0.1",
     "needle": "^2.8.0",
@@ -27,8 +26,8 @@
     "react-dom": "18.1.0",
     "react-select": "^4.3.1",
     "rehype-autolink-headings": "^5.0.1",
-    "rehype-highlight": "^5.0.2",
     "rehype-katex": "^6.0.2",
+    "rehype-prism": "^2.1.2",
     "rehype-slug": "^4.0.1",
     "rehype-stringify": "^8.0.0",
     "reorg-rehype": "^2.3.16",
