--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react-dom": "18.1.0",
     "react-select": "^4.3.1",
     "rehype-autolink-headings": "^5.0.1",
+    "rehype-highlight": "^5.0.2",
     "rehype-katex": "^6.0.2",
-    "rehype-prism": "^2.1.2",
     "rehype-slug": "^4.0.1",
     "rehype-stringify": "^8.0.0",
     "sass": "^1.32.8",
