--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-select": "^4.3.1",
+    "rehype-add-classes": "^1.0.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^5.0.2",
     "rehype-katex": "^6.0.2",
