--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "needle": "^3.1.0",
     "next": "^12.1.6",
     "react": "18.1.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.1.0",
     "react-select": "^5.3.1",
     "rehype-add-classes": "^1.0.0",
