--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/needle": "^2.5.3",
     "animejs": "^3.2.1",
     "autolinker": "^3.15.0",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.2.0",
     "memo": "https://github.com/eggc/memo",
     "n-readlines": "^1.0.1",
     "needle": "^3.1.0",
