--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animejs": "^3.2.1",
     "autolinker": "^3.15.0",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "memo": "https://github.com/eggc/memo",
     "n-readlines": "^1.0.1",
     "needle": "^3.1.0",
